# connector-k8s

./: .clippy.toml  .dockerignore  .pre-commit-config.yaml  .repository-initialized  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  init.sh  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.config/: hakari.toml
.github/: renovate.json5
.github/actions/setup-rust/: action.yaml
.github/workflows/: audit.yaml  audit.yml  ci.yaml  ci.yml  committed.yaml  ifttt-lint.yaml  pre-commit.yaml  rust-next.yaml  rust-next.yml  spelling.yaml  template.yaml  template.yml
crates/reconciler/: Cargo.toml
crates/reconciler/src/: context.rs  engine.rs  lib.rs  reconciler.rs  render_cache.rs  review.rs  slice.rs  telemetry.rs
crates/workspace-hack/: Cargo.toml
docs/: component-context-v1.md  generation-receipt-v1.md  render-cache-v1.md  review-projection-v1.md
services/server/: Cargo.toml
services/server/src/: main.rs
tests/contract-harness/: Cargo.toml
tests/contract-harness/src/: main.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/src/tests/: smoke.rs
tests/testsuite/: Cargo.toml
