[workspace]
resolver = "3"
members = ["crates/*", "services/*", "tests/*"]

[workspace.package]
repository = "https://github.com/henosis-playground/connector-k8s"
edition = "2024"
# LINT.IfChange(msrv)
rust-version = "1.96.0"
# LINT.ThenChange(
#     //.github/workflows/audit.yaml:msrv,
#     //.github/workflows/ci.yaml:msrv,
#     //.github/workflows/pre-commit.yaml:msrv,
#     //.pre-commit-config.yaml:msrv,
# )
publish = false

[workspace.dependencies]
buffa = "0.8.1"
connectrpc = { version = "0.8.1", features = ["client", "server"] }
faultline = "0.1.0"
hex = "0.4.3"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [
  "fs",
  "macros",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
toml = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.17.0", features = ["v5", "v7"] }

henosis-proto = { git = "https://github.com/henosis-playground/core.git", branch = "proto-draft" }

henosis-k8s-reconciler = { path = "crates/reconciler" }

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
bool_assert_comparison = "allow"
branches_sharing_code = "allow"
checked_conversions = "warn"
collapsible_else_if = "allow"
collapsible_match = "allow"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_same_then_else = "allow"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_and_return = "allow"                 # sometimes good to name what you are returning
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
mem_forget = "warn"
mutex_integer = "warn"
needless_continue = "allow"
needless_for_each = "warn"
negative_feature_names = "warn"
path_buf_push_overwrite = "warn"
print_stderr = "warn"
print_stdout = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
result_large_err = "allow"
same_functions_in_if_condition = "warn"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
uninlined_format_args = "warn"
verbose_file_reads = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"

[profile.release]
opt-level = 3
strip = true
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
debug = "line-tables-only"
panic = "abort"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.testing]
inherits = "dev"

[profile.testing.package."*"]
opt-level = 3
