[package]
name = "henosis-k8s-reconciler"
version = "0.0.0"
description = "Kubernetes reconciliation logic for Henosis graph slices"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
buffa.workspace = true
connectrpc.workspace = true
faultline.workspace = true
henosis-proto.workspace = true
hex.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
workspace-hack = { version = "0.0.0", path = "../workspace-hack" }

[lints]
workspace = true
