[package]
name = "workspace-hack"
version = "0.0.0"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "workspace-hack package, managed by hakari"

### BEGIN HAKARI SECTION
[dependencies]
serde_core = { version = "1", features = ["alloc"] }

[build-dependencies]
serde_core = { version = "1", features = ["alloc"] }

### END HAKARI SECTION

[lints]
workspace = true
