[package]
name = "henosis-connector-k8s-server"
version = "0.0.0"
description = "Service process for the Henosis Kubernetes reconciler"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
henosis-k8s-reconciler.workspace = true
workspace-hack = { version = "0.0.0", path = "../../crates/workspace-hack" }

[lints]
workspace = true
