[package]
name = "henosis-connector-k8s-server"
version = "0.0.0"
description = "Service process for the Henosis Kubernetes reconciler"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
connectrpc.workspace = true
henosis-k8s-reconciler.workspace = true
henosis-proto.workspace = true
http.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
workspace-hack = { version = "0.0.0", path = "../../crates/workspace-hack" }

[lints]
workspace = true
