[package]
name = "integration"
version = "0.0.0"
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

[dev-dependencies]
automod.workspace = true

[lints]
workspace = true

[dependencies]
workspace-hack = { version = "0.0.0", path = "../../crates/workspace-hack" }
